--- a/about.css
+++ b/about.css
@@ -7,7 +7,7 @@ h3 {
 }
 .container {
   display:flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: top;
   margin-left: 10px;
   margin-right: 10px;
@@ -15,7 +15,8 @@ h3 {
 }
 
 .container img {
-  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 7px;
 }
 
 .home {
