--- a/pages.css
+++ b/pages.css
@@ -119,3 +119,19 @@ a:visited {
 .hover-container:hover img:last-child {
   opacity: 0;
 }
+
+.stubhubitems {
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: -8vh;
+  padding-left: 20vh;
+  padding-right: 20vh;
+}
+
+.stubhubimg {
+  box-shadow: 0px 0px 20px #000000;
+  margin-bottom: 10vh;
+  width: 30%;
+}
