--- a/ArtDesign.css
+++ b/ArtDesign.css
@@ -1,4 +1,3 @@
-
 .home {
   display: flex;
   justify-content: space-around;
@@ -35,103 +34,76 @@ a:visited {
     text-decoration: underline;
 }
 
-.container {
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.hover-container {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  padding-top: 220px;
-  width: 250px;
-}
-
-.hover-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.hover-container:hover img:last-child {
-  opacity: 0;
-}
-
 #wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
-.button {
-  padding: 2px 2px;
-  text-decoration: none;
-  transition: all 0.2s ease-out;
+.button:hover {
+  opacity: 0.7;
 }
 
 .overlay {
-
-  position: absolute;
+  position: fixed;
+  overflow: auto;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.9);
   transition: opacity 200ms;
   visibility: hidden;
   opacity: 0;
+  width: 100%;
+  height: 100%;
+
 }
-.overlay .cancel {
-  position: absolute;
-  cursor: default;
-}
+
 .overlay:target {
   visibility: visible;
   opacity: 1;
 }
 
 .popup {
-  margin: 50px auto;
-  padding: 20px;
-  background: #fff;
-  border: 1px solid #666;
-  width: 600px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  margin: 70px auto;
+  max-width: 600px;
+  width: 70%;
+  box-shadow: 0px 0px 50px #000000;
   position: relative;
+
 }
+
 .popup p {
   margin-top: 0;
-  color: #666;
+  color: #fff;
+  opacity: 0.8;
   font-family: Helvetica, sans-serif;
+  font-weight: lighter;
   text-align: center;
 }
+
 .popup .close {
   position: absolute;
-  width: 5px;
-  height: 5px;
-  top: 0px;
-  right: 12px;
+  top: -40px;
+  right: -30px;
   opacity: 0.8;
   transition: all 200ms;
-  font-size: 20px;
+  font-size: 35px;
   font-weight: bold;
   text-decoration: none;
-  color: #666;
+  color: #fff;
 }
 .popup .close:hover {
   opacity: 1;
 }
+
 .popup .content {
-  max-height: 400px;
-  overflow: auto;
-}
-.popup p {
-  margin: 0 0 1em;
-}
-.popup p:last-child {
-  margin: 0;
+  position: absolute;
+  right: 50px;
+  left: 50px;
+  margin-top: 20px;
+  opacity: 0.8;
+  font-size: 22px;
+  color: #fff;
 }
