--- a/ArtDesign.css
+++ b/ArtDesign.css
@@ -21,6 +21,7 @@ h1 {
 
 a:link {
     text-decoration: none;
+    color: black;
 }
 a:visited {
     color: black;
@@ -106,4 +107,19 @@ a:visited {
   opacity: 0.8;
   font-size: 22px;
   color: #fff;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  font-size: 15px;
+  font-family: Helvetica;
+  max-width: 500px;
+  line-height: 4vh;
+  font-weight: 400;
+  margin-top: 0px;
+  text-align: center;
 }
