--- a/about.css
+++ b/about.css
@@ -1,12 +1,11 @@
 h3 {
   font-family: Helvetica;
   max-width: 500px;
-  line-height: 4vh;
+  line-height: 25px;
   font-weight: 400;
   margin-top: 0px;
-  text-align: center;
 }
-h2 {
+p {
   font-size: 15px;
   font-family: Helvetica;
   max-width: 500px;
@@ -52,6 +51,7 @@ h1 {
 
 a:link {
     text-decoration: none;
+    color: black;
 }
 a:visited {
     color: black;
@@ -95,6 +95,7 @@ span:hover + .test {
     position: absolute;
 }
 
-.contact {
-  font-size: 15px;
+.footer {
+  display: flex;
+  justify-content: center;
 }
