--- a/pages.css
+++ b/pages.css
@@ -83,6 +83,7 @@ h1 {
 
 a:link {
     text-decoration: none;
+    color: black;
 }
 a:visited {
     color: black;
@@ -134,4 +135,19 @@ a:visited {
   box-shadow: 0px 0px 20px #000000;
   margin-bottom: 10vh;
   width: 30%;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  font-size: 15px;
+  font-family: Helvetica;
+  max-width: 500px;
+  line-height: 4vh;
+  font-weight: 400;
+  margin-top: 0px;
+  text-align: center;
 }
