--- a/about.css
+++ b/about.css
@@ -1,11 +1,12 @@
 h3 {
   font-family: Helvetica;
   max-width: 500px;
-  line-height: 25px;
+  line-height: 4vh;
   font-weight: 400;
   margin-top: 0px;
+  text-align: center;
 }
-p {
+h2 {
   font-size: 15px;
   font-family: Helvetica;
   max-width: 500px;
@@ -51,7 +52,6 @@ h1 {
 
 a:link {
     text-decoration: none;
-    color: black;
 }
 a:visited {
     color: black;
@@ -95,7 +95,6 @@ span:hover + .test {
     position: absolute;
 }
 
-.footer {
-  display: flex;
-  justify-content: center;
+.contact {
+  font-size: 15px;
 }
