--- a/AD2.css
+++ b/AD2.css
@@ -69,7 +69,7 @@ p {
   font-size: 15px;
   font-family: Helvetica;
   max-width: 500px;
-  line-height: 4vh;
+  line-height: 25px;
   font-weight: 400;
   margin-top: 0px;
   text-align: center;
