--- a/about.css
+++ b/about.css
@@ -9,7 +9,7 @@ p {
   font-size: 15px;
   font-family: Helvetica;
   max-width: 500px;
-  line-height: 4vh;
+  line-height: 25px;
   font-weight: 400;
   margin-top: 0px;
   text-align: center;
@@ -18,13 +18,11 @@ p {
   display:flex;
   justify-content: space-around;
   align-items: top;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 0px;
+  margin-bottom: -35px;
 }
 
 .container img {
-  padding-right: 20px;
+  margin-right: -125px;
   margin-top: 7px;
 }
 
