--- a/ArtDesign.css
+++ b/ArtDesign.css
@@ -35,6 +35,11 @@ a:visited {
     text-decoration: underline;
 }
 
+h2 {
+  font-family: Helvetica;
+  text-align: center;
+}
+
 #wrapper {
   display: flex;
   justify-content: center;
@@ -70,7 +75,6 @@ a:visited {
   margin: 70px auto;
   max-width: 600px;
   width: 70%;
-  box-shadow: 0px 0px 50px #000000;
   position: relative;
 
 }
@@ -83,7 +87,33 @@ a:visited {
   font-weight: lighter;
   text-align: center;
 }
+.popup .rightarrow {
+  position: absolute;
+  top: 110px;
+  right: -95px;
+  opacity: 0.8;
+  transition: all 200ms;
+  font-size: 125px;
+  text-decoration: none;
+  color: #fff;
+}
+.popup .rightarrow:hover {
+  opacity: 1;
+}
 
+.popup .leftarrow {
+  position: absolute;
+  top: 110px;
+  right: 650px;
+  opacity: 0.8;
+  transition: all 200ms;
+  font-size: 125px;
+  text-decoration: none;
+  color: #fff;
+}
+.popup .leftarrow:hover {
+  opacity: 1;
+}
 .popup .close {
   position: absolute;
   top: -40px;
@@ -122,4 +152,28 @@ p {
   font-weight: 400;
   margin-top: 0px;
   text-align: center;
+}
+
+.container {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hover-container {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  padding-top: 40vh;
+  width: 200px;
+}
+
+.hover-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hover-container:hover img:last-child {
+  opacity: 0;
 }
