--- a/ArtDesign.css
+++ b/ArtDesign.css
@@ -116,7 +116,7 @@ h2 {
 .popup .close {
   position: absolute;
   top: -40px;
-  right: -30px;
+  right: -40px;
   opacity: 0.8;
   transition: all 200ms;
   font-size: 35px;
@@ -147,7 +147,7 @@ p {
   font-size: 15px;
   font-family: Helvetica;
   max-width: 500px;
-  line-height: 4vh;
+  line-height: 50px;
   font-weight: 400;
   margin-top: 0px;
   text-align: center;
@@ -163,7 +163,7 @@ p {
   position: relative;
   display: block;
   overflow: hidden;
-  padding-top: 40vh;
+  padding-top: 200px;
   width: 200px;
 }
 
