--- a/DesignForGood.css
+++ b/DesignForGood.css
@@ -72,57 +72,45 @@ h2 {
 
 .popup {
   margin: 70px auto;
-  max-width: 600px;
-  width: 70%;
+  max-width: 80%;
   position: relative;
-
 }
 
-.popup p {
-  margin-top: 0;
-  color: #fff;
-  opacity: 0.8;
-  font-family: Helvetica, sans-serif;
-  font-weight: lighter;
-  text-align: center;
-}
 .popup .rightarrow {
   position: absolute;
-  top: 110px;
-  right: -95px;
+  top: 150px;
+  right: -60px;
   opacity: 0.8;
-  transition: all 200ms;
   font-size: 125px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.popup .leftarrow {
+  position: absolute;
+  top: 150px;
+  left: -60px;
+  opacity: 0.8;
+  font-size: 125px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.popup .close {
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  opacity: 0.8;
+  font-size: 35px;
+  font-weight: bold;
   text-decoration: none;
   color: #fff;
 }
 .popup .rightarrow:hover {
   opacity: 1;
 }
-
-.popup .leftarrow {
-  position: absolute;
-  top: 110px;
-  right: 650px;
-  opacity: 0.8;
-  transition: all 200ms;
-  font-size: 125px;
-  text-decoration: none;
-  color: #fff;
-}
 .popup .leftarrow:hover {
   opacity: 1;
-}
-.popup .close {
-  position: absolute;
-  top: -40px;
-  right: -40px;
-  opacity: 0.8;
-  transition: all 200ms;
-  font-size: 35px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #fff;
 }
 .popup .close:hover {
   opacity: 1;
@@ -138,9 +126,15 @@ h2 {
   color: #fff;
 }
 
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
 p {
   font-size: 15px;
   font-family: Helvetica;
+  max-width: 500px;
   line-height: 25px;
   font-weight: 400;
   margin-top: 0px;
@@ -169,4 +163,13 @@ p {
 
 .hover-container:hover img:last-child {
   opacity: 0;
+}
+
+h3 {
+  font-family: Helvetica;
+  text-align: center;
+  font-weight: 200;
+  font-size: 20px;
+  max-width: 900px;
+  margin: auto;
 }
