--- a/work.css
+++ b/work.css
@@ -62,7 +62,9 @@ a:visited {
 
 .footer {
   display: flex;
+  text-align: center;
   justify-content: center;
+  align-items: flex-end;
 }
 
 p {
@@ -73,4 +75,8 @@ p {
   font-weight: 400;
   margin-top: 0px;
   text-align: center;
+}
+
+.button:hover {
+  opacity: 0.7;
 }
