--- a/pages.css
+++ b/pages.css
@@ -125,15 +125,14 @@ a:visited {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: -60px;
-  padding-left: 150px;
-  padding-right: 150px;
+  margin-top: -80px;
 }
 
-.stubhubimg {
-  box-shadow: 0px 0px 15px #777;
-  margin-bottom: 80px;
-  width: 30%;
+.lpitems {
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 p {
