--- a/ArtDesign.css
+++ b/ArtDesign.css
@@ -43,6 +43,8 @@ h2 {
 #wrapper {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 40px;
 }
 
