--- a/ArtDesign.css
+++ b/ArtDesign.css
@@ -19,6 +19,11 @@ h1 {
   margin-bottom: 0px;
 }
 
+.icons {
+  margin-top: 62px;
+  margin-left: -7px;
+}
+
 a:link {
     text-decoration: none;
     color: black;
