--- a/about.css
+++ b/about.css
@@ -13,6 +13,7 @@ p {
   margin-top: 0px;
   text-align: center;
 }
+
 .container {
   display:flex;
   justify-content: center;
@@ -41,6 +42,12 @@ p {
 .header {
   display: flex;
 }
+
+.icons {
+margin-top: 62px;
+margin-left: -7px;
+}
+
 h1 {
   margin-bottom: 0px;
 }
