--- a/DesignForGood.css
+++ b/DesignForGood.css
@@ -3,6 +3,7 @@
   justify-content: space-around;
   width: 250px;
   height: 130px;
+  margin-left: -5px;
   padding-top: 34px;
   flex-wrap: wrap;
   font-family: Helvetica;
@@ -154,8 +155,8 @@ p {
   position: relative;
   display: block;
   overflow: hidden;
-  padding-top: 200px;
-  width: 200px;
+  padding-top: 215px;
+  width: 240px;
 }
 
 .hover-container img {
