--- a/pages.css
+++ b/pages.css
@@ -62,6 +62,7 @@ h4 {
   justify-content: space-around;
   width: 250px;
   height: 130px;
+  margin-left: -5px;
   padding-top: 34px;
   flex-wrap: wrap;
   font-family: Helvetica;
@@ -119,8 +120,8 @@ a:visited {
   position: relative;
   display: block;
   overflow: hidden;
-  padding-top: 200px;
-  width: 200px;
+  padding-top: 215px;
+  width: 240px;
 }
 
 .hover-container img {
